[project]
name = "langgraph-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.37.0",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.6.3",
    "mcp>=1.12.3",
    "mypy>=1.17.1",
    "nest-asyncio>=1.6.0",
    "pillow>=11.3.0",
]
